# backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  initial_data.py  main.py  pyproject.toml  requirements.txt
app/: env.py
app/db/: database.py
app/models/: model.py
app/modules/auth/: auth.py  auth_deps.py  auth_schema.py
app/modules/book_core/: book_api.py  book_schema.py
db/migrations/: env.py
db/migrations/versions/: 33ef80a64760_upgrade_users.py  eb2835af80c4_generate_models.py
docker/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
