[tool.poetry]
name = "pbl-backend"
version = "0.1.0"
description = "Personal Book Library"
authors = ["lakithk <Lakith.k@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pbl_backend"}]

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.103.2"
python-decouple = "^3.8"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
